Revert "fix segfault"
This reverts commit a465351b4bae4c48c85f0687a2a16da943421519.